--- a/ServergameThreejs/base.css
+++ b/ServergameThreejs/base.css
@@ -7,3 +7,9 @@ body {
   padding: 0;
   overscroll-behavior: none;
 }
+
+#target {
+  width: 100% !important;
+  height: 100% !important;
+  position: absolute;
+}
